--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">6 Nov</p>
 				<p class="title">1857</p>
@@ -43,7 +43,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">13 Feb</p>
 				<p class="title">1859</p>
@@ -59,7 +59,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle"></p>
 				<p class="title">1859</p>
@@ -75,7 +75,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">27 Nov</p>
 				<p class="title">1860</p>
@@ -91,7 +91,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle"></p>
 				<p class="title">1863</p>
@@ -107,7 +107,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle"></p>
 				<p class="title">1863</p>
@@ -123,7 +123,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">13 Mar</p>
 				<p class="title">1868</p>
@@ -139,7 +139,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">3 Oct</p>
 				<p class="title">1879</p>
@@ -155,7 +155,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">20 Oct</p>
 				<p class="title">1879</p>
@@ -171,7 +171,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">4 Nov</p>
 				<p class="title">1880</p>
@@ -187,7 +187,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">28 Jan</p>
 				<p class="title">1886</p>
@@ -203,7 +203,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">20 May</p>
 				<p class="title">1886</p>
@@ -219,7 +219,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">26 Jan</p>
 				<p class="title">1888</p>
@@ -235,7 +235,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">20 Oct</p>
 				<p class="title">1889</p>
@@ -251,7 +251,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">19 Oct</p>
 				<p class="title">1891</p>
@@ -267,7 +267,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">4 Nov</p>
 				<p class="title">1892</p>
@@ -283,7 +283,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">10 Jul</p>
 				<p class="title">1895</p>
@@ -299,7 +299,7 @@ death: 1899
 				</footer>
 			</div>
 		</li>
-		<li class="event">
+		<li class="event row">
 			<div class="time col-md-2">
 				<p class="subtitle">3 Mar</p>
 				<p class="title">1899</p>
