--- a/index copy.html
+++ b/index copy.html
@@ -31,10 +31,11 @@ death: 1899
 			<div class="time col-md-2">
 				<p class="subtitle">6 Nov</p>
 				<p class="title">1857</p>
+				<p class="subtitle">Age 18</p>
 			</div>
 			<div class="eventcontent col-md-10">
 				<header>
-					<h2>Marriage <span class="age">Age 18</span></h2>
+					<h2>Marriage</h2>
 				</header>
 				<p>Paul Paulsen married Andrine Gulbrandsdr on November 6, 1857, in Buskerud, Norway, when he was 18 years old.</p>
 				<footer>
@@ -46,11 +47,11 @@ death: 1899
 			<div class="time col-md-2">
 				<p class="subtitle">13 Feb</p>
 				<p class="title">1859</p>
-				
+				<p class="subtitle">Age 18</p>
 			</div>
 			<div class="eventcontent col-md-10">
 				<header>
-					<h2>Birth of Daughter <span class="subtitle">Age 18</span></h2>
+					<h2>Birth of Daughter</h2>
 				</header>
 				<p>His daughter Anna Mathea "Thea" was born on February 13, 1859, in Norway.</p>
 				<footer>
@@ -60,6 +61,7 @@ death: 1899
 		</li>
 		<li class="event row">
 			<div class="time col-md-2">
+				<p class="subtitle"></p>
 				<p class="title">1859</p>
 				<p class="subtitle">Aug 20</p>
 			</div>
